[workspace]
resolver = "2"
members = [
  "contracts/*",
  "soroban-examples/token/",
  "soroban-examples/timelock/"
]

[workspace.package]
version = "22.0.0-rc.3"
edition = "2021"

[dependencies]
soroban-sdk = { version = "22.0.0-rc.3.1" }
soroban-token-sdk = { version = "22.0.0-rc.3.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release.package.soroban-env-host]
debug = false

[profile.release.package.stellar-xdr]
debug = false